Fixed divider spacing

--- a/src/chat/_dividers.scss
+++ b/src/chat/_dividers.scss
@@ -1,6 +1,6 @@
 #app-mount .divider-JfaTT5 {
   &.isUnread-3Ef-o9 {
-    margin: calc(var(--message-padding) / -1 - 1px) 8px calc(var(--message-padding) / -1) calc(55px + (var(--message-padding) * 2));
+    margin: calc(var(--message-padding) / -1 + (var(--message-padding) / 2)) 8px var(--message-padding) calc(55px + (var(--message-padding) * 2));
     height: 0;
     top: 0;
     &.beforeGroup-1rH1F0 {
